--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Players></title>
+    <title>E-Players</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="" class="css">
+    <script src="https://kit.fontawesome.com/750a6561ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
-    <header></header>
+    <header class="header-top">
+        <div class="content flex-spbt-center">
+            <img src="img/logo 1.svg" alt="Logo E-Players">
+                <nav class="menu">
+                    <ul class="flex-spbt-center">
+                         <li><a href="#">Início</a></li>
+                         <li><a href="#">Campeonatos</a></li>
+                         <li><a href="#">Resultados</a></li>
+                         <li><a href="#">Notícias</a></li>
+                         <li><a href="#">Cadastro/Login</a></li>
+                    </ul>
+                        <a href="#" id="menu-bars">
+                            <i class="fas fa-bars"></i>
+                        </a>
+                </nav>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 
