--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="banner-content">
                             <div class="banner-text">
                             <h1>Liga E-Players</h1>
-                            <p>O Maio   r portal de campeonatos online</p>
+                            <p>O Maior portal de campeonatos online</p>
                             <a href="#">Inscreva-se</a>
                         </div>
                     </div>
@@ -54,7 +54,30 @@
                 </ul>
             </div>
      </section>
-    </main>
+     <section class="about">
+        <div class="about-angulation">
+            <div class="angulation"></div>
+        </div>
+        <div class="container-about">
+            <div class="content-about">
+                <div class="text-about">
+                    <h2>Como participar das ligas?</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                       typesetting industry. Lorem Ipsum has been the industry's
+                       standard dummy text ever since the 1500s, when an unknown
+                       printer took a galley of type and scrambled it to make a
+                       type specimen book. It has survived not only five centuries,
+                       but also the leap into electronic typesetting, remaining essentially 
+                       unchanged. It was popularised in the 1960s with the release of Letraset
+                       sheets containing Lorem Ipsum passages, and more recently with desktop
+                       publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                </div>
+                <img src="img/lol.png" alt="Personagem Ezreal, do game League of Legends">
+            </div>
+        </div>
+
+        </section>
+        </main>
     <footer></footer>
 
 </body>
