--- a/index.html
+++ b/index.html
@@ -1,84 +1,262 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head> <!--Incio Head-->
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"> 
+    <link rel="stylesheet" href="estilos/style.css">
     <title>E-Players</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="" class="css">
-    <script src="https://kit.fontawesome.com/750a6561ab.js" crossorigin="anonymous"></script>
-</head>
+</head> <!--Fim Head-->
 <body>
-    
-    <header class="header-top">
-        <div class="content flex-spbt-center">
-            <img src="img/logo.svg" alt="Logo E-Players">
-                <nav class="menu">
-                    <ul class="flex-spbt-center">
-                         <li><a href="#">Início</a></li>
-                         <li><a href="#">Campeonatos</a></li>
-                         <li><a href="#">Resultados</a></li>
-                         <li><a href="#">Notícias</a></li>
-                         <li><a href="#">Cadastro/Login</a></li>
-                    </ul>
-                        <a href="#" id="menu-bars">
-                            <i class="fas fa-bars"></i>
-                        </a>
-                </nav>
+    <!-- Header -->
+    <header class="header">
+        <div class="content flex-content">
+            <img src="img/Logo.svg" alt="logo E-Players">
+            <nav class="menu-header">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Horarios</a></li>
+                    <li><a href="#">Campeonatos</a></li>
+                    <li><a href="#">Resultados</a></li>
+                    <li><a href="">Cadastro/login</a></li>
+                </ul>
+            </nav>
+            <a href="#" id="header-bars"><i class="fas fa-bars"></i></a> 
         </div>
     </header>
-    <main>
-     <section class="banner">
-       <picture>
-           <source media="(max-width: 90em)" srcset="img/Banner1440.jpg">
-              <img src="img/Banner1920.jpg" alt="Pilos de Formula 1, Hamilton, riccardo, Vetel, Verstapen">
-                </picture>
-                    <div class="banner-container">
-                        <div class="banner-content">
-                            <div class="banner-text">
-                            <h1>Liga E-Players</h1>
-                            <p>O Maior portal de campeonatos online</p>
-                            <a href="#">Inscreva-se</a>
+
+    <!-- Banner -->
+    <main class="banner">
+        <div class="content-banner">
+            <div class="image-banner">
+                <img src="img/keyart_crushed 1.png" alt="Pilotos de formula 1">
+            </div>
+            <div class="text-banner">
+                <h1>LIGA E-Players</h1>
+                <p>O maior portal de campeonatos online</p>
+                <a href="#">Inscreva-se</a>
+            </div>
+        </div>
+    </main>
+
+    <!-- Games -->
+    <section class="games">''
+        <div class="content-games">
+            <a href="#"><img src="img/logo-f1.png" alt="Logo formula 1"></a>
+            <a href="#"><img src="img/logo-lol.png" alt="Logo League of Legends"></a>
+            <a href="#"><img src="img/logo-cs.png" alt="Logo Counter-Strike"></a>
+            <a href="#"><img src="img/logo-valorant.png" alt="Logo Valorant"></a>
+            <a href="#"><img src="img/logo-fifa.png" alt="Logo Fifa"></a>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="about">
+           <div class="back-about">
+                <div class="angulation-about">
+                </div>
+           </div>
+           <div class="container-about">
+               <div class="content-about">
+                   <div class="text-about">
+                       <h2>Como participar das ligas?</h2>
+                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the .<br>
+                        <br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen boook.</p>
+                   </div>
+                   <div class="image-about">
+                       <img src="img/img-about.png" alt="Personagem League of Legends">
+                   </div>
+               </div>
+           </div>
+    </section>
+
+    <!-- Matches -->
+    <section class="matches">
+        <div class="content-matches">
+            <div class="live-matches">
+                <h2>Ao <br>vivo</h2>
+                <div class="teams-matches">
+                    <p>SK</p>
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>vs</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                    <p>Flamengo</p>
+                </div>
+            </div>
+            <div class="later-matches">
+                <h2>Em <br>Breve</h2>
+                <div class="teams-matches" id="espacamento">
+                    <p>SK</p>
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>vs</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                    <p>Flamengo</p>
+                </div>
+                <div class="teams-matches">
+                    <p>SK</p>
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>vs</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                    <p>Flamengo</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- News -->
+    <section class="news">
+        <h2>Noticias</h2>
+        <div class="content-news">
+            <div class="news-news">
+                <div class="bloco-news">
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia3.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia2.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia1.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
                 </div>
-     </section>
-        <section class="games">
-            <div class="content flex-spbt-center">
-                <ul class="flex-spbt-center">
-                    <li><a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo da formula 1"></a></li>
-                    <li><a href="#"><img src="img/logo-lol-300x131 1.png" alt="Logo de League of Legends"></a></li>
-                    <li><a href="#"><img src="img/Counter-Strike-Logo-Transparent-PNG 1.png" alt="Logo do Counter Strike"></a></li>
-                    <li><a href="#"><img src="img/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo do Valorant"></a></li>
-                    <li><a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo do FIFA"></a></li>
-                </ul>
-            </div>
-     </section>
-     <section class="about">
-        <div class="about-angulation">
-            <div class="angulation"></div>
-        </div>
-        <div class="container-about">
-            <div class="content-about">
-                <div class="text-about">
-                    <h2>Como participar das ligas?</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                       typesetting industry. Lorem Ipsum has been the industry's
-                       standard dummy text ever since the 1500s, when an unknown
-                       printer took a galley of type and scrambled it to make a
-                       type specimen book. It has survived not only five centuries,
-                       but also the leap into electronic typesetting, remaining essentially 
-                       unchanged. It was popularised in the 1960s with the release of Letraset
-                       sheets containing Lorem Ipsum passages, and more recently with desktop
-                       publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                <div class="bloco-news">
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia6.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia4.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia5.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
                 </div>
-                <img src="img/lol.png" alt="Personagem Ezreal, do game League of Legends">
+            </div>
+            <div class="content-tabela">
+                <div class="tabela-news">
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>1/12/2020 19:00</p>
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
 
-        </section>
-        </main>
-    <footer></footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="content-footer">
+           
 
+            <div class="line-footer"></div>
+
+            <div class="inferior-footer">
+                <div class="logo-footer">
+                    <img src="img/Logo.svg" alt="Logo E-Players">
+                </div>
+                <div class="direitos-footer">
+                    <p>Todos os direitos reservados a <span>Marco A. </span>© 2020</p>
+                </div>
+                <div class="buttons-footer">
+                    <ul>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Ajuda</a></li>
+                        <li><a href="#">Legal</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
